Trying to clean up some useless code and and a name to navbar. I have added but I have to change to change the color so that it can be visible

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
       <div class="container">
+          
           <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" alt="logo" />
+          <a class="navbar-brand navbar-dark nav-link " href="#">Navbar</a>  <!-- Need to be change -->
           </a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="fas fa-bars"></span>
@@ -54,23 +56,23 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                <!-- Slide One - Set the background image for this slide in the line below -->
-               <div class="carousel-item active" style="background-image: url('images/slider-01.jpg')">
+               <div class="carousel-item active" style="background-image: url('images/slider-01.jpeg')">
                   <div class="carousel-caption d-none d-md-block">
                      <h3>Welcome to Sustainability-Development-Project</h3>
                      <p>A Great Theme For Garden Lawn Care</p>
                   </div>
                </div>
                <!-- Slide Two - Set the background image for this slide in the line below -->
-               <div class="carousel-item" style="background-image: url('images/slider-02.jpg')">
+               <div class="carousel-item" style="background-image: url('images/slider-02.jpeg')">
                   <div class="carousel-caption d-none d-md-block">
                      <h3>Beautiful Garden</h3>
                      <p>A Great Theme For Garden Lawn Care</p>
                   </div>
                </div>
                <!-- Slide Three - Set the background image for this slide in the line below -->
-               <div class="carousel-item" style="background-image: url('images/slider-03.jpg')">
+               <div class="carousel-item" style="background-image: url('images/slider-03.jpeg')">
                   <div class="carousel-caption d-none d-md-block">
-                     <<h3>Welcome to Sustainability-Development-Project</h3>
+                     <h3>Welcome to Sustainability-Development-Project</h3>
                      <p>A Great Theme For Garden Lawn Care</p>
                   </div>
                </div>
@@ -116,7 +118,7 @@ growth.</li>
                   </ul>
                </div>
                <div class="col-lg-6">
-                  <img class="img-fluid rounded" src="images/about-img.jpg" alt="" />
+                  <img class="img-fluid rounded" src="images/about-img.jpeg" alt="" />
                </div>
             </div>
             <!-- /.row -->
@@ -129,7 +131,7 @@ growth.</li>
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-01.jpg" alt="" />
+                           <img class="card-img-top" src="images/portfolio-img-01.jpeg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
@@ -144,7 +146,7 @@ growth.</li>
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-02.jpg" alt="" />
+                           <img class="card-img-top" src="images/portfolio-img-02.jpeg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
@@ -159,7 +161,7 @@ growth.</li>
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-03.jpg" alt="" />
+                           <img class="card-img-top" src="images/portfolio-img-03.jpeg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
@@ -174,7 +176,7 @@ growth.</li>
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-04.jpg" alt="" />
+                           <img class="card-img-top" src="images/portfolio-img-04.jpeg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
@@ -204,7 +206,7 @@ growth.</li>
                   <div class="card h-100">
                      <div class="card-img">
                         <a href="#">
-                           <img class="card-img-top" src="images/portfolio-img-01.jpg" alt="" />
+                           <img class="card-img-top" src="images/portfolio-img-01.jpeg" alt="" />
                            <div class="overlay"><i class="fas fa-arrows-alt"></i></div>
                         </a>
                      </div>
