--- a/about.html
+++ b/about.html
@@ -16,42 +16,76 @@
 <body>
 	<!-- Navigation -->
 	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-light top-nav fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="logo" />
-            </a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="fas fa-bars"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-					   <a class="nav-link" href="index.html">Home</a>
-					</li>
-					<li class="nav-item">
-					   <a class="nav-link active" href="about.html">About</a>
-					</li>
-					<li class="nav-item">
-					   <a class="nav-link" href="blog-post.html">Blog</a>
-					</li>
-					<li class="nav-item">
-					   <a class="nav-link" href="contact.html">Contact</a>
-					</li>
-				<li class="nav-item">
-				 <a class="nav-link" href="faq.html">FaQ</a>
-			   </li>
-				 </ul>
-            </div>
-        </div>
-    </nav>
-	<!-- full Title -->
-	<div class="full-title">
 		<div class="container">
-			<!-- Page Heading/Breadcrumbs -->
-			<h1 class="mt-4 mb-3">About
-			</h1>
+			
+			<a class="navbar-brand" href="index.html">
+			<img src="images/logo.png" alt="logo" />
+			<a class="nav-link nav-color" href="#">Sustainability-Development-Project</a>  <!-- Need to be change -->
+			</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="fas fa-bars"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+			   <ul class="navbar-nav ml-auto">
+				  <li class="nav-item">
+					 <a class="nav-link active" href="index.html">Home</a>
+				  </li>
+				  <li class="nav-item">
+					 <a class="nav-link" href="about.html">About</a>
+				  </li>
+				  <li class="nav-item">
+					 <a class="nav-link" href="blog-post.html">Blog</a>
+				  </li>
+				  <li class="nav-item">
+					 <a class="nav-link" href="contact.html">Contact</a>
+				  </li>
+			  <li class="nav-item">
+			   <a class="nav-link" href="faq.html">FaQ</a>
+			 </li>
+			   </ul>
+			</div>
 		</div>
-	</div>
+	</nav>
+	  <header class="slider-main">
+		  <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+			  <ol class="carousel-indicators">
+				 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+				 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			  </ol>
+			  <div class="carousel-inner" role="listbox">
+				 <!-- Slide One - Set the background image for this slide in the line below -->
+				 <div class="carousel-item active" style="background-image: url('images/slider-01.jpeg')">
+					<div class="carousel-caption d-none d-md-block">
+					   <h3>Welcome to Sustainability-Development-Project</h3>
+					   <p>A Great Theme For Garden Lawn Care</p>
+					</div>
+				 </div>
+				 <!-- Slide Two - Set the background image for this slide in the line below -->
+				 <div class="carousel-item" style="background-image: url('images/slider-02.jpeg')">
+					<div class="carousel-caption d-none d-md-block">
+					   <h3>Beautiful Garden</h3>
+					   <p>A Great Theme For Garden Lawn Care</p>
+					</div>
+				 </div>
+				 <!-- Slide Three - Set the background image for this slide in the line below -->
+				 <div class="carousel-item" style="background-image: url('images/slider-03.jpeg')">
+					<div class="carousel-caption d-none d-md-block">
+					   <h3>Welcome to Sustainability-Development-Project</h3>
+					   <p>A Great Theme For Garden Lawn Care</p>
+					</div>
+				 </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				  <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				  <span class="sr-only">Next</span>
+			  </a>
+		  </div>
+	  </header>
     <!-- Page Content -->
     <div class="container">
 		<div class="breadcrumb-main">
