--- a/faq.html
+++ b/faq.html
@@ -19,6 +19,7 @@
         <div class="container">
             <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo" />
+			<a class="nav-link nav-color" href="#">Sustainability-Development-Project</a>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
@@ -46,7 +47,7 @@
     </nav>
 
 	<!-- full Title -->
-	<div class="full-title">
+	<div class="full-title" style="background-image: url('images/all-title-bg.jpeg')">
 		<div class="container">
 			<!-- Page Heading/Breadcrumbs -->
 			<h1 class="mt-4 mb-3">FAQ
