--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           
           <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" alt="logo" />
-          <a class="navbar-brand navbar-dark nav-link " href="#">Navbar</a>  <!-- Need to be change -->
+          <a class="nav-link nav-color" href="#">Navbar</a>  <!-- Need to be change -->
           </a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="fas fa-bars"></span>
