--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           
           <a class="navbar-brand" href="index.html">
           <img src="images/logo.png" alt="logo" />
-          <a class="nav-link nav-color" href="#">Navbar</a>  <!-- Need to be change -->
+          <a class="nav-link nav-color" href="#">Sustainability Diversity Project</a>  <!-- Need to be change -->
           </a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="fas fa-bars"></span>
@@ -58,7 +58,7 @@
                <!-- Slide One - Set the background image for this slide in the line below -->
                <div class="carousel-item active" style="background-image: url('images/slider-01.jpeg')">
                   <div class="carousel-caption d-none d-md-block">
-                     <h3>Welcome to Sustainability-Development-Project</h3>
+                     <h3>Welcome to the Sustainability Diversity Project</h3>
                      <p>A Great Theme For Garden Lawn Care</p>
                   </div>
                </div>
@@ -72,7 +72,7 @@
                <!-- Slide Three - Set the background image for this slide in the line below -->
                <div class="carousel-item" style="background-image: url('images/slider-03.jpeg')">
                   <div class="carousel-caption d-none d-md-block">
-                     <h3>Welcome to Sustainability-Development-Project</h3>
+                     <h3>Welcome to the Sustainability Diversity Project</h3>
                      <p>A Great Theme For Garden Lawn Care</p>
                   </div>
                </div>
@@ -94,27 +94,20 @@
             <div class="row">
                <div class="col-lg-6">
                   <h2>Oude Mollen Food Garden</h2>
-                  Oude Molen Food Garden is an initiative that was started by Kelly 8 years ago. 
-                  She saw potential and an opportunity in it. She believed 
-                  that as individuals, it was possible for us to grow plants naturally and to become agriculturally
-                   self-sufficient.
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  We worked with and collaborated with the Oude Molen Food Garden as part of our project.
+Kelly was the driving force behind the initiative eight years ago. She saw opportunity
+ and potential in it. She believed that as individuals, we were capable of growing plants 
+ naturally and becoming agriculturally self-sufficient.
+                   <p></p>
                   <h5>Our goals</h5>
                   <ul>
-                     <li>To continue to add value to the surrounding community through horticulture and
-the preservation of heirloom seeds which are pest resistant and not genetically
-modified. These seeds also propagate by themselves.</li>
-                     <li>To create a multifunctional space for Courses, Art Projects, Market Spaces and
-much more.</li>
-<li>Provide a source of food security that is available to the public and a space to
-offer programs for other organisations to facilitate the growth and development of
-young people.</li>
-<li>To educate the public on the importance of food security and community involvement</li>
-<li>To be able to build the initiative up to a point where the necessary foundation has
-been laid from an economic, agricultural and sustainable perspective. Achieving
-this ensures that the project can one day be handed down to others just as
-passionate about the project but with more time and resource to guarantee future
-growth.</li>
+                     <li>To add value to the community through horticulture and pest-resistant, non-GMO heirloom seeds. Self-propagating seeds.</li>
+<li>To establish a versatile place for classes, art, and markets.</li>
+<li>To rovide public food security and a venue for other organizations to undertake youth-development initiatives.</li>
+<li>To promote food security and community interaction</li>
+
+<li>To build the project until the economic, agricultural, and sustainability foundations are in place.
+    This ensures that the project may be passed on to others with the same enthusiasm, but more time and resources for growth.</li>
                   </ul>
                </div>
                <div class="col-lg-6">
@@ -182,7 +175,7 @@ growth.</li>
                      </div>
                      <div class="card-body">
                         <h4 class="card-title">
-                           <a href="#">Water Baganig</a>
+                           <a href="#">Compost transportation</a>
                         </h4>
                      </div>
                   </div>
@@ -212,7 +205,7 @@ growth.</li>
                      </div>
                      <div class="card-body">
                         <h4 class="card-title">
-                           <a href="#">Snow removal</a>
+                           <a href="#">Straw removal</a>
                         </h4>
                      </div>
                   </div>
@@ -224,7 +217,11 @@ growth.</li>
         <!-- Get In Touch Now Section -->
         <div class="row mb-4">
             <div class="col-md-8">
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+               <p>
+                  At the Sustainability Diversity Project we are always looking for ways to make a 
+                  bigger impact in our communities. If you have any idea that you'd like to provide us
+                  or if you'd like to join us don't hesitate to contact us.
+               </p>
             </div>
             <div class="col-md-4">
                <a class="btn btn-lg btn-secondary btn-block" href="#">Get In Touch Now</a>
@@ -243,8 +240,8 @@ growth.</li>
                answer your question and set up a meeting with you.
              </p>
              <p><i class="fa fa-location-arrow"></i>Alexandra Rd, Pinelands</p>
-             <p><i class="fa fa-phone"></i> +91-9999878398 </p>
-             <p><i class="fa fa fa-envelope"></i> info@example.com </p>
+             <p><i class="fa fa-phone"></i> +27 82 560 7965 </p>
+             <p><i class="fa fa fa-envelope"></i> SDP@gmail.com </p>
              </div>
              <div class="col-lg-3 col-md-6 col-sm-6 col">
              <h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -284,26 +281,26 @@ growth.</li>
                       <img class="img-fluid" src="images/post-img-01.jpeg" alt="" />
                    </div>
                    <div class="media-body">
-                      <p>How to find best dog food?</p>
-                      <span>22 Sep 2018</span>
-                   </div>
-                </li>
-                <li class="media">
-                   <div class="media-left">
-                      <img class="img-fluid" src="images/post-img-02.jpeg" alt="" />
-                   </div>
-                   <div class="media-body">
-                      <p>How to find best dog food?</p>
-                      <span>34 Sep 2018</span>
-                   </div>
-                </li>
-                <li class="media">
-                   <div class="media-left">
-                      <img class="img-fluid" src="images/post-img-03.jpeg" alt="" />
-                   </div>
-                   <div class="media-body">
-                      <p>How to find best dog food?</p>
-                      <span>30 Sep 2018</span>
+                     <p>How to use compost?</p>
+                     <span>30 Oct 2022</span>
+                  </div>
+               </li>
+               <li class="media">
+                  <div class="media-left">
+                     <img class="img-fluid" src="images/post-img-02.jpeg" alt="" />
+                  </div>
+                  <div class="media-body">
+                     <p>How to set up your garden?</p>
+                     <span>30 Oct 2022</span>
+                  </div>
+               </li>
+               <li class="media">
+                  <div class="media-left">
+                     <img class="img-fluid" src="images/post-img-03.jpeg" alt="" />
+                  </div>
+                  <div class="media-body">
+                     <p>How to take care of plants?</p>
+                     <span>30 Oct 2022</span>
                    </div>
                 </li>
              </ul>
@@ -313,11 +310,11 @@ growth.</li>
     </div>
       <div class="container">
           <div class="footer-logo">
-          <a href="#"><img src="images/footer-logo.png" alt="" /></a>
+          <a href="#"><img src="images/LOGO.png" alt="" /></a>
        </div>
           <!--foote_bottom_ul_amrc ends here-->
-          <p class="copyright text-center">All Rights Reserved. &copy; 2022 <a href="#">Sustainability-Development-Project</a> Design By : 
-          <a href="https://www.linkedin.com/in/loic-mavah-tseket-271543157/">Loic Mavah-Tseket</a>
+          <p class="copyright text-center">All Rights Reserved. &copy; 2022 <a href="#">Sustainability Diversity Project</a> Design By : 
+          <a href="https://www.linkedin.com/in/loic-mavah-tseket-271543157/">Loic & Jean Sebastien</a>
           </p>
           <ul class="social_footer_ul">
           <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
