--- a/faq.html
+++ b/faq.html
@@ -19,7 +19,7 @@
         <div class="container">
             <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="logo" />
-			<a class="nav-link nav-color" href="#">Sustainability-Development-Project</a>
+			<a class="nav-link nav-color" href="#">Sustainability Diversity Project</a>
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="fas fa-bars"></span>
@@ -84,7 +84,7 @@
 				<div class="card accordion-single">
 				  <div class="card-header" role="tab" id="headingTwo">
 					<h5 class="mb-0">
-					  <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Morbi malesuada enim non luctus tincidunt.</a>
+					  <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">What are the long term objectives of the SDP</a>
 					</h5>
 				  </div>
 				  <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
@@ -96,7 +96,7 @@
 				<div class="card accordion-single">
 				  <div class="card-header" role="tab" id="headingThree">
 					<h5 class="mb-0">
-					  <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Fusce eu dui condimentum, placerat nisl id, egestas est.</a>
+					  <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">How I can make a contribution</a>
 					</h5>
 				  </div>
 				  <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
@@ -123,8 +123,8 @@
 						answer your question and set up a meeting with you.
 					</p>
 					<p><i class="fa fa-location-arrow"></i>Alexandra Rd, Pinelands</p>
-					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
+					<p><i class="fa fa-phone"></i> +27 82 560 7965 </p>
+					<p><i class="fa fa fa-envelope"></i> SDP@gmail.com </p>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -164,8 +164,8 @@
 								<img class="img-fluid" src="images/post-img-01.jpeg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>22 Sep 2018</span>
+								<p>How to use compost?</p>
+								<span>30 Oct 2022</span>
 							</div>
 						</li>
 						<li class="media">
@@ -173,8 +173,8 @@
 								<img class="img-fluid" src="images/post-img-02.jpeg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>34 Sep 2018</span>
+								<p>How to set up your garden?</p>
+								<span>30 Oct 2022</span>
 							</div>
 						</li>
 						<li class="media">
@@ -182,8 +182,8 @@
 								<img class="img-fluid" src="images/post-img-03.jpeg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>30 Sep 2018</span>
+								<p>How to take care of plants?</p>
+								<span>30 Oct 2022</span>
 							</div>
 						</li>
 					</ul>
@@ -193,11 +193,11 @@
 		</div>
         <div class="container">
             <div class="footer-logo">
-				<a href="#"><img src="images/footer-logo.png" alt="" /></a>
+				<a href="#"><img src="images/LOGO.png" alt="" /></a>
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="copyright text-center">All Rights Reserved. &copy; 2022 <a href="#">Sustainability-Development-Project</a> Design By : 
-				<a href="https://www.linkedin.com/in/loic-mavah-tseket-271543157/">Loic Mavah-Tseket</a>
+            <p class="copyright text-center">All Rights Reserved. &copy; 2022 <a href="#">Sustainability Diversity Project</a> Design By : 
+				<a href="https://www.linkedin.com/in/loic-mavah-tseket-271543157/">Loic & Jean Sebastien</a>
             </p>
             <ul class="social_footer_ul">
 				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
