--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 			
 			<a class="navbar-brand" href="index.html">
 			<img src="images/logo.png" alt="logo" />
-			<a class="nav-link nav-color" href="#">Sustainability-Development-Project</a>  <!-- Need to be change -->
+			<a class="nav-link nav-color" href="#">Sustainability Diversity Project</a>  <!-- Need to be change -->
 			</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="fas fa-bars"></span>
@@ -28,10 +28,10 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 			   <ul class="navbar-nav ml-auto">
 				  <li class="nav-item">
-					 <a class="nav-link active" href="index.html">Home</a>
+					 <a class="nav-link" href="index.html">Home</a>
 				  </li>
 				  <li class="nav-item">
-					 <a class="nav-link" href="about.html">About</a>
+					 <a class="nav-link active" href="about.html">About</a>
 				  </li>
 				  <li class="nav-item">
 					 <a class="nav-link" href="blog-post.html">Blog</a>
@@ -244,8 +244,8 @@ impactful individuals</p>
 						answer your question and set up a meeting with you.
 					</p>
 					<p><i class="fa fa-location-arrow"></i>Alexandra Rd, Pinelands</p>
-					<p><i class="fa fa-phone"></i> +91-9999878398 </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com </p>
+					<p><i class="fa fa-phone"></i> +27 82 560 7965 </p>
+					<p><i class="fa fa fa-envelope"></i> SDP@gmail.com </p>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6 col">
 					<h5 class="headin5_amrc col_white_amrc pt2">Follow us</h5>
@@ -285,8 +285,8 @@ impactful individuals</p>
 								<img class="img-fluid" src="images/post-img-01.jpeg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>22 Sep 2018</span>
+								<p>How to use compost?</p>
+								<span>30 Oct 2022</span>
 							</div>
 						</li>
 						<li class="media">
@@ -294,8 +294,8 @@ impactful individuals</p>
 								<img class="img-fluid" src="images/post-img-02.jpeg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>34 Sep 2018</span>
+								<p>How to set up your garden?</p>
+								<span>30 Oct 2022</span>
 							</div>
 						</li>
 						<li class="media">
@@ -303,8 +303,8 @@ impactful individuals</p>
 								<img class="img-fluid" src="images/post-img-03.jpeg" alt="" />
 							</div>
 							<div class="media-body">
-								<p>How to find best dog food?</p>
-								<span>30 Sep 2018</span>
+								<p>How to take care of plants?</p>
+								<span>30 Oct 2022</span>
 							</div>
 						</li>
 					</ul>
@@ -314,11 +314,11 @@ impactful individuals</p>
 		</div>
         <div class="container">
             <div class="footer-logo">
-				<a href="#"><img src="images/footer-logo.png" alt="" /></a>
+				<a href="#"><img src="images/LOGO.png" alt="" /></a>
 			</div>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="copyright text-center">All Rights Reserved. &copy; 2022 <a href="#">Sustainability-Development-Project</a> Design By : 
-				<a href="https://www.linkedin.com/in/loic-mavah-tseket-271543157/">Loic Mavah-Tseket</a>
+            <p class="copyright text-center">All Rights Reserved. &copy; 2022 <a href="#">Sustainability Diversity Project</a> Design By : 
+				<a href="https://www.linkedin.com/in/loic-mavah-tseket-271543157/">Loic & Jean Sebastien</a>
             </p>
             <ul class="social_footer_ul">
 				<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
